--- a/index.html
+++ b/index.html
@@ -33,22 +33,18 @@
           </ul>
         </nav>
         <div class="header-contacts-bar">
-          <div class="header-contacts-element">
+          <a href="mailto:info@devstudio.com" class="header-contacts">
             <svg class="icon-contacts" width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
-            <a href="mailto:info@devstudio.com" class="header-contacts"
-              >info@devstudio.com</a
-            >
-          </div>
-          <div class="header-contacts-element">
+            info@devstudio.com</a
+          >
+
+          <a href="tel:+48111111111" class="header-contacts">
             <svg class="icon-contacts" width="10" height="16">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>
-            <a href="tel:+48111111111" class="header-contacts"
-              >+48 111 111 111</a
-            >
-          </div>
+              <use href="./images/icons.svg#icon-smartphone"></use></svg
+            >+48 111 111 111</a
+          >
         </div>
       </header>
     </div>
