add icons to description

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         <div class="section">
           <ul class="descriptionlist">
             <li>
+              <div class="descriptionlist-card-item">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h4 class="descriptionlist-title">LOREM IPSUM</h4>
               <p class="descriptionlist-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -65,6 +70,11 @@
               </p>
             </li>
             <li>
+              <div class="descriptionlist-card-item">
+                <svg width="66.96px" height="70px">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h4 class="descriptionlist-title">LOREM IPSUM</h4>
               <p class="descriptionlist-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -72,6 +82,11 @@
               </p>
             </li>
             <li>
+              <div class="descriptionlist-card-item">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h4 class="descriptionlist-title">LOREM IPSUM</h4>
               <p class="descriptionlist-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -79,6 +94,11 @@
               </p>
             </li>
             <li>
+              <div class="descriptionlist-card-item">
+                <svg width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h4 class="descriptionlist-title">LOREM IPSUM</h4>
               <p class="descriptionlist-item">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
