update our team with icons

--- a/index.html
+++ b/index.html
@@ -152,6 +152,28 @@
                 <figcaption class="card-description">
                   <h5 class="name">John Doe</h5>
                   <p class="work-position">Product Designer</p>
+                  <div class="socialmedia-icon-bar">
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
+                    <div>
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                    <div>
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                    <div>
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </div>
                 </figcaption>
               </figure>
             </li>
