--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </div>
-                    <div>
+                    <div class="socialmedia-element">
                       <svg class="socialmedia-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </div>
-                    <div>
+                    <div class="socialmedia-element">
                       <svg class="socialmedia-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </div>
-                    <div>
+                    <div class="socialmedia-element">
                       <svg class="socialmedia-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -188,6 +188,28 @@
                 <figcaption class="card-description">
                   <h5 class="name">John Doe</h5>
                   <p class="work-position">Frontend Developer</p>
+                  <div class="socialmedia-icon-bar">
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </div>
                 </figcaption>
               </figure>
             </li>
@@ -202,6 +224,28 @@
                 <figcaption class="card-description">
                   <h5 class="name">John Doe</h5>
                   <p class="work-position">Marketing</p>
+                  <div class="socialmedia-icon-bar">
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </div>
                 </figcaption>
               </figure>
             </li>
@@ -216,8 +260,67 @@
                 <figcaption class="card-description">
                   <h5 class="name">John Doe</h5>
                   <p class="work-position">UI Designer</p>
+                  <div class="socialmedia-icon-bar">
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                    <div class="socialmedia-element">
+                      <svg class="socialmedia-icon" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </div>
                 </figcaption>
               </figure>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="ourclients section">
+        <div class="container">
+          <h2 class="subtitle">Nasi klienci</h2>
+          <ul class="ourclients-list">
+            <li class="ourclients-list-item">
+              <svg class="ourclients-icon" width="106px" height="60.04px">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+            </li>
+            <li class="ourclients-list-item">
+              <svg class="ourclients-icon" width="106px" height="60.04px">
+                <use href="./images/icons.svg#icon-logo1"></use>
+              </svg>
+            </li>
+            <li class="ourclients-list-item">
+              <svg class="ourclients-icon" width="106px" height="60.04px">
+                <use href="./images/icons.svg#icon-logo2"></use>
+              </svg>
+            </li>
+            <li class="ourclients-list-item">
+              <svg class="ourclients-icon" width="106px" height="60.04px">
+                <use href="./images/icons.svg#icon-logo3"></use>
+              </svg>
+            </li>
+            <li class="ourclients-list-item">
+              <svg class="ourclients-icon" width="106px" height="60.04px">
+                <use href="./images/icons.svg#icon-logo4"></use>
+              </svg>
+            </li>
+            <li class="ourclients-list-item">
+              <svg class="ourclients-icon" width="106px" height="60.04px">
+                <use href="./images/icons.svg#icon-logo5"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -226,18 +329,47 @@
 
     <footer class="footer-part">
       <div class="container">
-        <a class="footer-logo" href="index.html"
-          ><p>Web<span class="white-text">Studio</span></p></a
-        >
-        <address class="footer-address">
-          m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <a href="mailto:info@devstudio.com" class="footer-contacts-mail"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+48111111111" class="footer-contacts-phone"
-          >+48 111 111 111</a
-        >
+        <div class="footer-parts">
+          <div class="footer-part-one">
+            <a class="footer-logo" href="index.html"
+              ><p>Web<span class="white-text">Studio</span></p></a
+            >
+            <address class="footer-address">
+              m. Warszawa, Aleje Jerozolimskie 21
+            </address>
+            <a href="mailto:info@devstudio.com" class="footer-contacts-mail"
+              >info@devstudio.com</a
+            >
+            <a href="tel:+48111111111" class="footer-contacts-phone"
+              >+48 111 111 111</a
+            >
+          </div>
+          <div class="footer-part-two">
+            <p class="footer-description">DOŁĄCZ DO NAS</p>
+            <div class="footer-socialmedia">
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </div>
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </div>
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </div>
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
