--- a/portfolio.html
+++ b/portfolio.html
@@ -194,18 +194,47 @@
     </div>
     <footer class="footer-part">
       <div class="container">
-        <a class="footer-logo" href="index.html"
-          ><p>Web<span class="white-text">Studio</span></p></a
-        >
-        <address class="footer-address">
-          m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <a href="mailto:info@devstudio.com" class="footer-contacts-mail"
-          >info@devstudio.com</a
-        >
-        <a href="tel:+48111111111" class="footer-contacts-phone"
-          >+48 111 111 111</a
-        >
+        <div class="footer-parts">
+          <div class="footer-part-one">
+            <a class="footer-logo" href="index.html"
+              ><p>Web<span class="white-text">Studio</span></p></a
+            >
+            <address class="footer-address">
+              m. Warszawa, Aleje Jerozolimskie 21
+            </address>
+            <a href="mailto:info@devstudio.com" class="footer-contacts-mail"
+              >info@devstudio.com</a
+            >
+            <a href="tel:+48111111111" class="footer-contacts-phone"
+              >+48 111 111 111</a
+            >
+          </div>
+          <div class="footer-part-two">
+            <p class="footer-description">DOŁĄCZ DO NAS</p>
+            <div class="footer-socialmedia">
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </div>
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </div>
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </div>
+              <div class="footer-socialmedia-element">
+                <svg class="socialmedia-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
